# PredictProtein

./: .gitmodules  AUTHORS  AUTHORS_PROSITE  COPYING  ChangeLog  MANIFEST.SKIP  Makefile  Makefile.am  Makefile.in  MakefilePP.mk  MakefilePPhtml.mk  Maxhom_Blosum.metric  NEWS  README  TODO  complete_list.txt  configure  configure.ac  example.in  filter_blastp_big.pl  makepp.mk  predictprotein  predictprotein.1.pod  predictprotein.in.pod  predictprotein.pod.in  predictproteinrc.default  predprot  quotes.mk  server.txt  tquick.in
RG/: Makefile.am  PP.pm  cgi-lib.pm  lib-col.pm  lib-err.pm  lib_Nors.pm  libpp.pm  parseData.pl  predictPP.pm  test.pl
debian/: changelog  control  copyright  lintian-overrides  preinst  rules  templates
debian/po/: templates.pot
doc/: pp_flow.dia
doc/highschool_presentation/: eftu.muts  eftu_393insC.fasta  eftu_e345c.fasta  eftu_e348c.fasta  eftu_f323c.fasta  eftu_g325c.fasta  eftu_g346c.fasta  eftu_k324c.fasta  eftu_p344c.fasta  eftu_query.fasta  eftu_sav.fasta  eftu_v347c.fasta  eftu_y326c.fasta
example/: Makefile.am  Makefile.in  cad23.fasta  cad23.in  tsnap_query.fasta
examples/: Makefile.am  Makefile.in  p53.fasta  p53.in  tquick.fasta
helper_apps/: Makefile  Makefile.am  Makefile.in  blast2html.pl  conv_phd2html.pl  conv_prof.pl  filter_blastp_big.pl  lib-col.pl  lib-phdhtml.pm  lib-phdhtml.pm~  lib-prof.pl  lib-profhtml.pl  lib-profhtml.pl.orig  lib-profhtml.pl~  lib-profwrt.pl  nors.pl  prosite_scan.pl  prosite_scan.pod
helper_apps/prosite/ps_scan/: Prosite.pm  README  README.prf  pfscan  ps_scan.pl  psa2msa
log/: getUnique.pl
perl/: Build.PL.in  MANIFEST
pub/: server.txt
pub/FctPred/: fctpred.pl  getid.prl  keylist-filt.txt
pub/LOCtarget_backup/: KwPred.pl  annoHom.pl  browse.pl  myBlastAllProcessRdb.pl  pp_resonline.pl  predLoci.pl  proc_annoHom.pl  struct.pl  svmPred.pl
pub/LOCtarget_v1/: annoHom.pl  combComp.pl  findSigp.pl  grep_NLS_update.pl  keyRes.pl  makeComp.pl  maxf.pl  myBlastAllProcessRdb.pl  pp_resonline.pl  predLoci.pl  query.pl  query_old_bup.pl  svmRun_str.pl  svm_test.pl  swissKwVec.pl
pub/agape/: agape.pl  tagape.f
pub/asp/: asp_cubic.pl  prof.pm
pub/blastpsi/: blast2saf.pl  blastPsi_rdb4pp.pl  blastpgp.pl  blastpgp.pm  blastpgp_to_saf.pl
pub/coils/: coils.c
pub/conblast/: conBlast_pp.pl
pub/consurf/: AddLog.cpp  AddLog.h  NNiProp.cpp  NNiProp.h  NNiSep.cpp  NNiSep.h  Nni.cpp  Nni.h  aaJC.cpp  aaJC.h  allTrees.cpp  allTrees.h  allTreesSeparateModel.cpp  allTreesSeparateModel.h  alphabet.cpp  alphabet.h  amino.cpp  amino.h  bestAlpha.cpp  bestAlpha.h  bestAlphaManyTrees.cpp  bestAlphaManyTrees.h  bestHKYparam.cpp  bestHKYparam.h  brLenOpt.cpp  brLenOpt.h  brLenOptEM.cpp  brLenOptEM.h  brLenOptEM_Propotional.cpp  brLenOptEM_nGenes.cpp  chebyshevAccelerator.cpp  chebyshevAccelerator.h  checkcovFanctors.h  checkcovFanctorsWithFactors.h  clustalFormat.cpp  clustalFormat.h  cmdline.c  cmdline.h  codon.cpp  codon.h  (+132 more)
pub/cyspred/: RunCyspred.pm  runcyspred.pm  runcyspred.run.pm
pub/cyspred.bup.2004.03.05/: runcyspred.run.pl
pub/disis/: changeNN2SVM.pl  get_prediction.pl  get_raw_svm_pred-bup.pl  get_raw_svm_pred.pl  readSeqDNA-SVM-server.pl
pub/disulfind/: predict.sh
pub/ecgo/: enzlist.pl  prof.pm
pub/evalsec/: evalsec.pl
pub/isis/: readSeqServer.pl
pub/mview/: mview-br.pl  mview.pl
pub/ncoils/: coils-wrap.pl  t1.f
pub/nlprot/: README_LINUX.txt  install.pl  nlprot.pl  run-nlprot.pl  test_input.txt
pub/nls/: grep_NLS_update.pl  pp_resonline.pl
pub/nors/: nors.pl  nors_021203.pl  nors_OLD.pl
pub/pcc/: pcc_wrap.pl  pcc_wrap_last.pl  pcc_wrap_sequoia_WORK.pl  pcc_wrap_working.pl  test_fasta.f
pub/perl/: Sendmail.pm  ctime.pl
pub/pfam/: pfam.pl
pub/phd/: genePhd.pl  phd.pl
pub/prenup/: calc_energy_1seq.pl  mj-upper-right-matrix.txt  runPreNUP.pl  smooth_1seq-old.pl  smooth_1seq.pl
pub/prof/: prof  profconv
pub/profbval/: PROFbval-casp7.pl  PROFbval-temp.pl  PROFbval.pl  createDataFile.pl  lib-LINUX.f  lib-nn.f  nn.f  nnPar.f  nnTemp.f  nntemp.f  runPROFbval-casp7.pl  runPROFbval.pl  temp.f
pub/profcon/: 3chy.f  T0339.f  alpha.f  beta.f  blastpgp-2007.pl  manualPP.pl  run-PROFcon-2007.pl  run_prof08_CASP.pl  run_prof08_CASP_test.pl  run_prof08_EVA.pl  run_prof08_EVA_old.pl  tmp.f
pub/profcon.bup/: run_prof08.pl
pub/profcon2/: T129.f  run_prof08.pl  trim.pl
pub/proftmb/: one.f  proftmb.pl
pub/prosite/: prosite_scan.pl
pub/snap/: Blosum62.txt  SingleSequenceRun.pl  TabbedCreateNNinputFiles.pl  TransitionsBIG.txt  blosum62.txt  checkMutant.pl  createDataFile.pl  createDataFileAlign.pl  defaultRun.sh  extractAllSingle.pl  getExtractedSingle.pl  phat.txt  processJctMutsSingle.pl  (+8 more)
resources/: Addr.txt  FAQ.pp_mail  Help.txt  HtmlFooter.html  HtmlHead.html  HtmlHead_isis.html  HtmlQuote.html  Licence.txt  LicenceExplain.txt  Makefile.am  Makefile.in  News.txt  ProfCon  ReadMe  predictprotein.xsd
scr/: emailProcPP.pl  envPP.pm  fasta_md5.pl  getCachedResults.pl  manualPP.pl  manualPPisis.pl  predictPP.pl  scannerDB.pl  scannerPP.pl  scannerPP_GY.pl  scannerPPctrl.pl  testDB.pl
tst/: tst-diff.pl  tst-run.pl
work/: predict_h26909.sge.sh  predict_s66400.sge.sh
(+2282 files in other folders)
